<resources>
    <string name="app_name">Shop-peak</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="shopname">Shop Name</string>
    <string name="governate">Governate</string>
    <string name="city">City</string>
    <string name="category">Category</string>
    <string name="address">Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="join_us">join us</string>
    <string name="Terms">Terms &amp; Conditions</string>
    <string name="url">www.shop-peak.com</string>
    <string name="waitt">Please Waiting...</string>
    <string name="name_req">User Name Is Required</string>
    <string name="pass_req">PassWord Is Required</string>
    <string name="email_req">Email is Required</string>
    <string name="phone_req">Phone is Required</string>
    <string name="phone_error">Phone is Invalid</string>
    <string name="subject_req">Subject is required</string>
    <string name="message_req">Message is required</string>
    <string name="shopname_req">Shop name is required</string>
    <string name="governate_req">Governate is required</string>
    <string name="city_req">City is required</string>
    <string name="address_req">Address is required</string>
    <string name="category_req">category is required</string>
    <string name="pass_len">password is week</string>
    <string name="email_patt">email is not correct</string>
    <string name="accept_terms">You cannot sign up without accepting terms and conditions</string>
    <string name="undo">undo</string>
    <string name="home">Home</string>
    <string name="share">Share</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="contact">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="addlogo">Add Logo</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_your_profile">Profile updated</string>
    <string name="add_cart">Add To Cart</string>
    <string name="details">show more details</string>
    <string name="facebook_app_id">713163185768231</string>
    <string name="fb_login_protocol_scheme">fb713163185768231</string>
    <string name="login_create">Log in / Create account</string>
    <string name="check_connection">please check your Connection</string>
    <string name="networkconnectionAlert">Network Connection Alert</string>
    <string name="close">Close</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Product_Number">Product Number</string>
    <string name="product_name">Product Name</string>
    <string name="Main_Category">Main Category</string>
    <string name="SubCategory">SubCategory</string>
    <string name="price_after_discount">Price After Discount</string>
    <string name="price_before_discount">Price Before Discount</string>
    <string name="element_name">Element</string>
    <string name="element_description">Element Description</string>
    <string name="element_color">Element Color</string>
    <string name="Add_product">Add product</string>
    <string name="productname_req">Product name is required</string>
    <string name="productnumber_req">Product Number is required</string>
    <string name="price_before_discount__req">Price before Discount is required</string>
    <string name="price_after_discount_req">Price After Discount is required</string>
    <string name="element_name_req">Element  is required</string>
    <string name="element_description_req">Element Description  is required</string>
    <string name="element_color_req">Element Color is required</string>
    <string name="title_activity_maps">Map</string>
    <string name="notification">notification</string>
    <string name="wifi">Turn on WiFi</string>
    <string name="app_open_gps">The app will open the gps to determine your location.</string>
    <string name="ok">ok</string>
    <string name="add_govern">Add Govern</string>
    <string name="add_city">Add City</string>
    <string name="element">element</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="skip">Skip</string>
    <string name="continuee">Continue</string>
    <string name="add_main_image">Add Main Image</string>
    <string name="image">image</string>
    <string name="color">color</string>
    <string name="lat">Lat</string>
    <string name="log">LONG</string>
    <string name="edit_profile">Edit profile</string>
    <string name="share_loc">Share Your Location</string>
    <string name="chk_user_pas">Check Your Emeil Or PassWord</string>
    <string name="inc_img_path">Path of image false</string>
    <string name="tasnef_req">You must choose a label for the shop first</string>
    <string name="lat_lang_req">You must point your location on the map first</string>
    <string name="logo_req">Choose a logo to shop first</string>
    <string name="follow">Follow</string>
    <string name="addrate">Your rating has been successfully edited</string>
    <string name="addfav">The item has been successfully added to Favorites</string>
    <string name="deletfav">Favorite element removed successfully</string>
    <string name="unfollow">UnFollow</string>
    <string name="followers">Followers</string>
    <string name="products">Products</string>
    <string name="followe">Following</string>
    <string name="noproduct">There are no products now</string>
    <string name="nofav">There is no list of your favorites</string>
    <string name="ordersend">Your order has been successfully sent to us. Please wait....</string>
    <string name="youVonder">You are already joined to us Welcome</string>
    <string name="nooffer">There are currently no offers</string>
    <string name="Skip">Skip</string>
    <string name="SH_Log">Please Sign in or sign up .</string>
    <string name="Succ_send">Product successfully uploaded</string>
    <string name="order_basket_send">Your order has been successfully sent</string>
    <string name="confirm_req">The password is not the same</string>
    <string name="TermsNEw">Once you register, you agree to the terms and conditions</string>
    <string name="basket_data">"there is no products in basket"</string>
    <string name="nonotif">لايوجد اشعارات الان</string>
    <string name="success_login">Successfully login</string>
    <string name="success_added">Product Successfully Added</string>
    <string name="vender">seller</string>
    <string name="product">Product</string>
    <string name="setting">Setting</string>
    <string name="success_register">Successfully Register</string>
    <string name="following">Following</string>
    <string name="Really_Exit">Are you sure you want to exit?</string>
    <string name="order">Orders</string>
    <string name="online">Online</string>
    <string name="Offline">Offline</string>


</resources>
