<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alatheer.shop_peak.Activities.Signup_Activity">
    <RelativeLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
        <ImageView
            android:id="@+id/logo_img"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="70dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo"/>
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/layout"
            android:layout_below="@+id/logo_img"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:gravity="center">
            <EditText
                android:id="@+id/shop_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/txt_field"
                android:hint="@string/shopname"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"

                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"/>
            <EditText
                android:id="@+id/shop_email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/txt_field"
                android:hint="@string/email"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"/>
            <LinearLayout
                android:id="@+id/linear_address"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="3">
                <EditText
                    android:id="@+id/governate"
                    android:layout_width="100dp"
                    android:layout_height="45dp"
                    android:background="@drawable/txt_field"
                    android:layout_weight="1"
                    android:hint="@string/governate"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"/>
                <EditText
                    android:id="@+id/city"
                    android:layout_width="100dp"
                    android:layout_height="45dp"
                    android:background="@drawable/txt_field"
                    android:layout_weight="1"
                    android:hint="@string/city"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"/>
                <EditText
                    android:id="@+id/address"
                    android:layout_width="100dp"
                    android:layout_height="45dp"
                    android:background="@drawable/txt_field"
                    android:layout_weight="1"
                    android:hint="@string/address"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorPrimary"/>


            </LinearLayout>
            <EditText
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/txt_field"
                android:hint="@string/category"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"/>
            <Button
                android:id="@+id/add_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/txt_field"
                android:text="@string/addlogo"
                android:drawableLeft="@drawable/ic_add"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
            <Button
                android:id="@+id/btn_sign"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_field"
                android:layout_marginTop="25dp"
                android:text="@string/sign_up"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
