<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alatheer.shop_peak.Signup_Activity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_alignParentTop="true"
            android:layout_marginTop="120dp"
            android:layout_width="300dp"
            android:id="@+id/logo_img"
            android:layout_centerHorizontal="true"
            android:layout_height="80dp"
            android:src="@drawable/logo"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/layout"
            android:layout_below="@+id/logo_img"
            android:layout_marginTop="50dp"
            android:gravity="center">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/txt_field"
                android:hint="@string/user_name"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:textColorHint="@color/colorPrimary"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/txt_field"
                android:hint="@string/password"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:textColorHint="@color/colorPrimary"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/txt_field"
                android:hint="@string/email"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:textColorHint="@color/colorPrimary"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/txt_field"
                android:hint="@string/phone"
                android:paddingRight="15dp"
                android:paddingLeft="15dp"
                android:textColorHint="@color/colorPrimary"/>


            <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_field"
                android:layout_marginTop="25dp"
                android:text="@string/sign_up"
                android:textColor="@android:color/white"
                />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/Terms"
                android:textSize="20sp"

                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check_circle_black_24dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:id="@+id/check_img"
                android:visibility="visible"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check_circle_orange"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:id="@+id/check_img2"
                android:visibility="gone"/>
        </LinearLayout>

        </LinearLayout>

    </RelativeLayout>



</ScrollView>
