<?xml version="1.0" encoding="utf-8"?>



    <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        >

        <ImageView
            android:id="@+id/logo_img"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:src="@drawable/logo" />

        <LinearLayout

            android:id="@+id/layout"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo_img"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="vertical"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleDrawable="@drawable/icon_selector"
                android:textColorHint="@color/colorPrimary"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:hint="@string/email"
                app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/email"
                android:paddingLeft="7dp"
                android:paddingRight="7dp"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:background="@drawable/txt_field" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:passwordToggleEnabled="true"
                app:passwordToggleDrawable="@drawable/icon_selector"
                android:textColorHint="@color/colorPrimary"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                app:hintEnabled="false">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_password"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:hint="@string/password"
                    android:paddingLeft="7dp"
                    android:paddingRight="7dp"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:background="@drawable/txt_field"
                    android:inputType="textPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btn_login"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/btn_field"
                android:text="@string/log_in"
                android:textColor="@android:color/white" />

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="25dp"-->
                <!--android:gravity="center_horizontal"-->
                <!--android:orientation="horizontal">-->

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/Terms"-->
                    <!--android:textColor="@color/colorPrimary"-->
                    <!--android:textSize="17sp"-->

                    <!--/>-->
                <!--<CheckBox-->
                    <!--android:id="@+id/check_box"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginLeft="15dp"-->
                    <!--android:layout_marginRight="15dp"-->
                    <!--android:button="@drawable/check_box" />-->
            <!--</LinearLayout>-->


            <Button
                android:id="@+id/btn_sign"
                android:layout_width="95dp"
                android:layout_height="37dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/txt_field_signup"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Skip"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="20dp"
                android:textSize="17dp"/>
        </LinearLayout>


        <TextView
            android:id="@+id/link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/url"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"/>

    </RelativeLayout>

